@@ -60,3 +60,5 @@ configErrorMemory = "Wrong configuration for: 'runtime => memoryLeft'! Expected 
 configErrorMaxRuntime = "Wrong configuration for: 'runtime => maxRuntime'! Expected integer. The configured setting was not applied!"
 configErrorMaxRuntimeBig1 = "Wrong configuration for: 'runtime => maxRuntime'! Maximum for this server is: "
 configErrorMaxRuntimeBig2 = "The configured setting was not applied!"
+configErrorMaxStepNumber = "Wrong configuration for: 'backtraceAndError => maxStepNumber'! Expected integer. The configured setting was not applied!"
+maxStepNumber = "A backtrace tends to produce a lot of output, and browsers tend to have problems with more than 100MB output in HTML text. Normally it is not unneccessary to go back more than 10 steps, but if you need to, you can increase this number here."
