@@ -1,4 +1,6 @@
 2.2.1 dev
+- Added a configuration for the backtrace, to limit the analysed
+  steps.
 - Bugfix: Better cleanup of HTML fragments left open from
   the hosting CMS.
 - Bugfix: Reverted the 'Output -> File' change from 2.2.0
